# LangerFace

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt  run.sh  tsconfig.tools.json
.claude/: launch.json
.github/: pull_request_template.md
apps/: cli.py  web_app.py  webcam.py
assets/: agentic_incision_tool_schema.json  atlas_langer.json  atlas_rstl.json  atlas_rstl_flame.json  clinical_rules_face_incision.json  rstl_3dmm_prior_manifest.json  rstl_mediapipe_direction_prior.json
docs/: ADR-0001-backend-data-architecture.md  AGENTIC_INCISION.md  ANNOTATION_QA.md  ARCHITECTURE.md  BACKEND_DATA_ARCHITECTURE.md  CI_CD_VERCEL.md  CLINICAL_CASE_WORKFLOW_UI.md  CLOUDFLARE_BACKEND_ROLLOUT.md  CONTRIBUTING.md  CROSS_LANG_PARITY.md  ENGINEERING_LESSONS.md  ENVIRONMENT.md  FLAME_3D_TRACK.md  INCISION_FLAME_ASSET_STRATEGY.md  INCISION_PRIVACY_AUDIT.md  LABELS.md  MEDICAL.md  METHODS_AND_IMPLEMENTATION_SUMMARY.md  OBSERVABILITY.md  PERSONALIZED_TEXTURE_WARP.md  PRIVACY_AND_AUDIT.md  PRODUCT_BOUNDARIES.md  RSTL_3DMM_PRIOR.md  TODO.md  VALIDATION.md  WRINKLE_LESION_CUES.md  annotation_web.md  cross_lang_parity.md  headspace_data.md  headspace_pipeline.md
langerlines/: __init__.py  atlas.py  canonical.py  config.py  detector.py  occlusion.py  pipeline.py  render.py  smoothing.py  videoio.py
tests/: __init__.py  conftest.py  test_agentic_incision_audit.py  test_alignment.py  test_asset_sync.py  test_atlas.py  test_boundary_docs.py  test_canonical.py  test_clinical_rules_audit.py  test_cross_lang_parity.py  test_export_privacy_audit.py  test_flame_atlas_registration.py  test_flame_fit.py  test_flame_fit_realmodel.py  test_incision_agent.py  test_incision_agent_server.py  test_incision_review_gate_audit.py  test_mapping.py  test_media.py  test_observability.py  test_occlusion.py  test_pipeline.py  test_registration.py  test_render.py  test_rstl_direction_prior.py  test_smoke_imports.py  test_stability.py  test_stage2_validation.py  test_texture_warp.py  test_topology.py  test_tumor_input_audit.py  test_wrinkle_lesion_cues.py
tools/: annotate_atlas.py  apply_rstl_3dmm_review_packet.py  audit_agentic_incision_trace.py  audit_clinical_rules.py  audit_export_privacy.py  audit_incision_overlay_acceptance.mjs  audit_incision_overlay_acceptance.ts  audit_incision_overlay_replay.mjs  audit_incision_overlay_replay.ts  audit_incision_review_gate.py  audit_rstl_3dmm_prior.py  audit_tumor_input.py  build_3dmm_rstl_direction_prior.py  build_field_atlas.py  build_flame_basis.py  build_flame_rstl_direction_prior.py  build_incision_overlay_acceptance_evidence.mjs  build_incision_overlay_acceptance_evidence.ts  build_initial_atlas.py  build_rstl_3dmm_review_packet.py  build_rstl_direction_prior.py  capture_case_workflow_interactions.ts  capture_case_workflow_visual.ts  capture_compat_feature_parity.ts  debug_one.py  digitize_from_diagram.py  download_assets.py  dump_landmarks.py  evaluate_stage2_validation.py  export_flame_topology.py  export_web_assets.py  finetune_wrinkle_unet.py  fit_flame_to_landmarks.py  gen_web_constants.py  inspect_frames.py  montage.py  predict_wrinkle_masks.py  predict_wrinkle_unet.py  preview_texture_warp_board.py  prototype_wrinkle_lesion_cues.py  (+77 more)
web/: .vercelignore  annotate.css  annotate.html  annotate_main.d.ts  annotate_main.js  annotate_model.d.ts  annotate_model.js  annotate_viewer.d.ts  annotate_viewer.js  app.js  assets.d.ts  assets.js  atlas_contract.d.ts  atlas_contract.js  camera.d.ts  camera.js  canvas_fit.d.ts  canvas_fit.js  dom.d.ts  (+69 more)
(+273 files in other folders)
