# LangerFace — facial Langer/RSTL line projection (Stage 1) and, later,
# tumor-simulation / incision-design (Stage 2). See docs/ and MEMORY for vision.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langerface"
description = "Facial Langer/RSTL skin-tension-line projection for surgical incision-planning visualization"
readme = "README.md"
requires-python = ">=3.10,<3.13"   # mediapipe has no 3.13 wheels yet
license = { text = "Proprietary — research draft" }
dynamic = ["version"]
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",   # video I/O + anti-aliased polyline rendering
]

[project.optional-dependencies]
# Detection backend is pluggable (see detection.Detector); mediapipe is one impl.
# Kept optional so the core lib + test suite install without it (tests inject fakes).
mediapipe = ["mediapipe>=0.10.14"]   # Face Landmarker: 478 3D landmarks (image/video/live)
annotate = ["matplotlib>=3.8"]        # interactive atlas annotation/validation tools
dev = ["pytest>=8.0", "ruff>=0.5"]
all = ["langerface[mediapipe,annotate,dev]"]

[project.scripts]
langerface = "langerface.apps.cli:main"
langerface-webcam = "langerface.apps.webcam:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "langerface.__version__" }

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tools", "tests"]
# Vendored research pipeline (other student's HeadSpace scripts): kept faithful,
# not held to repo lint rules. Algorithms it relies on live in langerface/ and ARE linted.
extend-exclude = ["tools/headspace"]

[tool.ruff.lint]
# E402 (import not at top) is intentional in a couple of tool scripts; keep the rest strict.
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
